--- a/FormularioJS/index.html
+++ b/FormularioJS/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulario | Und 8.</title>
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
     <div class="main">
@@ -33,6 +33,6 @@
 
 
 
-    <script src="control.js"></script>
+    <script src="js/control.js"></script>
 </body>
 </html>
